--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+aniso8601==8.0.0
+attrs==20.2.0
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
+flask-restplus==0.13.0
 google-api-core==1.22.4
 google-api-python-client==1.12.3
 google-auth==1.22.1
@@ -13,11 +16,13 @@ httplib2==0.18.1
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jsonschema==3.2.0
 MarkupSafe==1.1.1
 oauthlib==3.1.0
 protobuf==3.13.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pyrsistent==0.17.3
 python-dotenv==0.14.0
 pytz==2020.1
 requests==2.24.0
@@ -26,4 +31,4 @@ rsa==4.6
 six==1.15.0
 uritemplate==3.0.1
 urllib3==1.25.10
-Werkzeug==1.0.1
+Werkzeug==0.16.1
