--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ jsonschema==3.2.0
 MarkupSafe==1.1.1
 oauthlib==3.1.0
 protobuf==3.13.0
+psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyrsistent==0.17.3
@@ -29,6 +30,7 @@ requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
 six==1.15.0
+SQLAlchemy==1.3.19
 uritemplate==3.0.1
 urllib3==1.25.10
 Werkzeug==0.16.1
